doc: cleanup releasenotes
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/doc/source/releasenotes/2023.2.rst
+++ b/doc/source/releasenotes/2023.2.rst
@@ -1,6 +1,6 @@
-===========================
-2023.2 Series Release Notes
-===========================
+=============================================
+3.x Release Notes (OpenStack 2023.2 "Bobcat")
+=============================================
 
 .. release-notes::
    :branch: stable/2023.2
