--- a/doc/source/releasenotes/2025.1.rst
+++ b/doc/source/releasenotes/2025.1.rst
@@ -1,6 +1,6 @@
-===========================
-2025.1 Series Release Notes
-===========================
+============================================
+6.x Release Notes (OpenStack 2025.1 "Epoxy")
+============================================
 
 .. release-notes::
    :branch: stable/2025.1
