--- a/doc/source/releasenotes/2025.2.rst
+++ b/doc/source/releasenotes/2025.2.rst
@@ -1,6 +1,6 @@
-===========================
-2025.2 Series Release Notes
-===========================
+===============================================
+7.x Release Notes (OpenStack 2025.2 "Flamingo")
+===============================================
 
 .. release-notes::
    :branch: stable/2025.2
