--- a/doc/source/releasenotes/2024.2.rst
+++ b/doc/source/releasenotes/2024.2.rst
@@ -1,6 +1,6 @@
-===========================
-2024.2 Series Release Notes
-===========================
+================================================
+5.x Release Notes (OpenStack 2024.2 "Dalmatian")
+================================================
 
 .. release-notes::
    :branch: stable/2024.2
