doc: make titles shorter
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/doc/source/releasenotes/2023.1.rst
+++ b/doc/source/releasenotes/2023.1.rst
@@ -1,6 +1,6 @@
-===============================================
-2.x Release Notes (OpenStack 2023.1 "Antelope")
-===============================================
+=================================
+2.x (OpenStack 2023.1 "Antelope")
+=================================
 
 .. release-notes::
    :branch: stable/2023.1
