--- a/doc/source/releasenotes/2023.2.rst
+++ b/doc/source/releasenotes/2023.2.rst
@@ -1,6 +1,6 @@
-=============================================
-3.x Release Notes (OpenStack 2023.2 "Bobcat")
-=============================================
+===============================
+3.x (OpenStack 2023.2 "Bobcat")
+===============================
 
 .. release-notes::
    :branch: stable/2023.2
