doc: shorten titles
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/doc/source/releasenotes/2024.1.rst
+++ b/doc/source/releasenotes/2024.1.rst
@@ -1,6 +1,6 @@
-================================
-4.x (OpenStack 2024.1 "Caracal")
-================================
+======================
+4.x (2024.1 "Caracal")
+======================
 
 .. release-notes::
    :branch: stable/2024.1
