--- a/doc/source/releasenotes/2024.2.rst
+++ b/doc/source/releasenotes/2024.2.rst
@@ -1,6 +1,6 @@
-==================================
-5.x (OpenStack 2024.2 "Dalmatian")
-==================================
+========================
+5.x (2024.2 "Dalmatian")
+========================
 
 .. release-notes::
    :branch: stable/2024.2
